# crabwaifu

./: .gitignore  Cargo.toml  Dockerfile  TODO.md  docker-compose.yml  server.toml
benchmark/: .env  Dockerfile  README.txt  docker-compose.yml  run_endpoint.sh  server.toml
crates/crabml/crabml-cli/: Cargo.toml
crates/crabml/crabml-cli/src/: main.rs
crates/crabml/crabml-core/: Cargo.toml
crates/crabml/crabml-llama2/: Cargo.toml
crates/crabml/crabml-vulkan/: Cargo.toml
crates/crabml/crabml-wgpu/: Cargo.toml
crates/crabwaifu-client/: Cargo.toml
crates/crabwaifu-client/src/: bench.rs  cli.rs  client.rs  lib.rs  main.rs  ui.rs
crates/crabwaifu-common/: Cargo.toml
crates/crabwaifu-common/src/: lib.rs  proto.rs  utils.rs
crates/crabwaifu-common/src/network/: flusher.rs  mod.rs  tcp.rs
crates/crabwaifu-server/: Cargo.toml
crates/crabwaifu-server/src/: config.rs  db.rs  lib.rs  main.rs  server.rs  session.rs  templ.rs
crates/crabwaifu-server/src/network/: flusher.rs  mod.rs
etc/initdb/: init-app-db.sql
etc/pgadmin/: servers.json
net-sim/: Dockerfile  README.md  run.sh
net-sim/scenarios/blackhole/: blackhole.cc
net-sim/scenarios/drop-rate/: drop-rate-error-model.cc  drop-rate.cc
net-sim/scenarios/helper/: network-simulator-helper.cc  network-simulator-helper.h  packet.h  point-to-point-helper.cc  point-to-point-helper.h
net-sim/scenarios/simple-p2p/: simple-p2p.cc
net-sim/scenarios/tcp-cross-traffic/: tcp-cross-traffic.cc
net-sim/scenarios/udp-cross-traffic/: udp-cross-traffic.cc
src/: main.rs
