[workspace]
resolver = "2"
members = [
    "crates/crabml/crabml-core",
    "crates/crabml/crabml-wgpu",
    "crates/crabml/crabml-vulkan",
    "crates/crabml/crabml-llama2",
    "crates/crabml/crabml-cli",
    "crates/crabwaifu-server",
    "crates/crabwaifu-client",
    "crates/crabwaifu-common",
]

[profile.release]
opt-level = 3

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
crabml = { version = "0.1.0", path = "crates/crabml/crabml-core" }
crabml-llama2 = { version = "0.1.0", path = "crates/crabml/crabml-llama2" }
crabml-wgpu = { version = "0.1.0", path = "crates/crabml/crabml-wgpu" }
crabml-vulkan = { version = "0.1.0", path = "crates/crabml/crabml-vulkan" }
crabwaifu-common = { version = "0.1.0", path = "crates/crabwaifu-common" }
raknet-rs = { git = "https://github.com/MemoriesOfTime/raknet-rs.git" }
