[workspace]
resolver = "2"
members = [
    "crates/crabwaifu-client",
    "crates/crabwaifu-common",
    "crates/crabwaifu-server",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
crabml = { git = "https://github.com/iGxnon/crabml.git" }
crabml-llama2 = { git = "https://github.com/iGxnon/crabml.git" }
crabml-wgpu = { git = "https://github.com/iGxnon/crabml.git" }
crabml-vulkan = { git = "https://github.com/iGxnon/crabml.git" }
crabwaifu-common = { version = "0.1.0", path = "crates/crabwaifu-common" }
raknet-rs = { git = "https://github.com/MemoriesOfTime/raknet-rs.git", features = ["rustc-hash"] }
kokoros = { git = "https://github.com/iGxnon/Kokoros.git" }
