[package]
name = "crabwaifu-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
crabwaifu-common = { workspace = true }
futures = { version = "0.3", default-features = false }
futures-async-stream = "0.2"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_6"] }
histogram = "0.11.2"
humansize = "2.0.0"
indicatif = "0.17.9"
raknet-rs = { workspace = true }
rustyline = "15.0.0"
termsize = "0.1"
tokio = { version = "1", features = ["full"] }
