[package]
name = "crabwaifu-common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bincode = "1"
bytes = "1"
futures = { version = "0.3.5", default-features = false }
log = "0.4"
raknet-rs = { workspace = true }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
