[package]
name = "crabwaifu-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1"
bytes = "1"
crabml = { workspace = true }
crabml-llama2 = { workspace = true }
crabwaifu-common = { workspace = true }
env_logger = "0.11"
futures = { version = "0.3.5", default-features = false }
log = "0.4"
num_cpus = "1.16.0"
raknet-rs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
