[package]
name = "crabml-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "crabml cli"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crabml = { workspace = true }
crabml-llama2 = { workspace = true }
crabml-wgpu = { workspace = true }
jemallocator = "0.3"
num_cpus = "1.16.0"
rayon = "1"
rustyline = "9.0.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
