[package]
name = "crabml"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "crabml core package"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
byteorder = "1.5.0"
crossbeam-channel = "0.5"
env_logger = "0.10"
half = { version = "2.3.1" }
int-enum = "0.5.0"
memmap2 = "0.7.1"
pollster = "0.2.4"
regex = "1"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"

[dev-dependencies]
approx = "0.5.1"
bencher = "0.1.5"
pretty_assertions = "1.2.1"
