[package]
name = "crabml-llama2"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "crabml llama2 support"

[dependencies]
crabml = { workspace = true }
crabml-vulkan = { workspace = true }
half = { version = "2.3.1" }
memmap2 = "0.7.1"
num_cpus = "1.16.0"
rand = "0.8.5"

[dev-dependencies]
approx = "0.5.1"
pretty_assertions = "1.2.1"
