[package]
name = "crabml-vulkan"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "crabml vulkan support"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
crabml = { workspace = true }
env_logger = "0.10"
half = { version = "2.3.1" }
int-enum = "0.5.0"
pollster = "0.2.4"
smallvec = "1.13.2"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"

[dev-dependencies]
approx = "0.5.1"
bencher = "0.1.5"
pretty_assertions = "1.2.1"
